welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean)
{
	if (versLAvant)
	{
		for(i <- 1 to nbrePas)
			avance();
	}
}
